<resources>
    <string name="app_name">VPET</string>
    <string name="hunger">Hunger</string>
    <string name="bmi_21">BMI : 21</string>
    <string name="weight_60kg">Weight : 60kg</string>
    <string name="todo">TODO</string>
    <string name="hello_world">Hello world</string>
    <string name="feed">Feed</string>
    <string name="edit">Edit</string>
    <string name="height">Height :</string>
    <string name="weight">Weight :</string>
    <string name="bmi">BMI：</string>
    <string name="hint_height">Please input your height (m)</string>
    <string name="hint_weight">Please input your weight (kg)</string>
    <string name="Edit">Physical Parameters</string>
    <string name="back">Confirm!</string>
</resources>
